--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.5"
   },
