--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,5 @@
     "express": "^4.21.0",
     "mongoose": "^8.6.2"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://backend:5000"
 }
