--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3'
 
 services:
+  root:
+    build:
+      context: .
+    volumes:
+      - .:/usr/src/app
+    command: npm install
+    working_dir: /usr/src/app
+    networks:
+      - mynetwork
+    # Ensure the root service completes before starting backend and frontend
+    depends_on:
+      - backend
+      - frontend
+
   backend:
     build:
       context: ./backend
@@ -23,7 +37,7 @@ services:
       - ./client:/usr/src/app
     environment:
       - NODE_ENV=development
-      - REACT_APP_API_HOST=http://backend:5000  # Use 'backend' service name, not localhost
+      - REACT_APP_API_HOST=http://localhost:5000  # Use 'backend' service name, not localhost
     depends_on:
       - backend
     networks:
